--- a/main.html
+++ b/main.html
@@ -1910,7 +1910,7 @@ app
     })
     ; 
 
-  $urlRouterProvider.otherwise("menu/lessons");
+  $urlRouterProvider.otherwise("menu/courses");
   $ionicConfigProvider.tabs.position('bottom'); 
 })
 
