--- a/index.html
+++ b/index.html
@@ -706,7 +706,7 @@ document.getElementById('signupform').style.display = 'none';
        window.location.href = 'https://cubiculociencias.github.io/tallerdepiano/main'; 
       }else if(validation.status == "newUser"){
         localStorage.setItem('TPtoken', validation.token);  
-       window.location.href = 'https://cubiculociencias.github.io/tallerdepiano/main#/menu/lessons'; 
+       window.location.href = 'https://cubiculociencias.github.io/tallerdepiano/main'; 
       }else {
         alert('Error, intenta otro método de inicio de sesión');
       }
