--- a/courses/index.html
+++ b/courses/index.html
@@ -1049,7 +1049,7 @@ body::-webkit-scrollbar-thumb {
               <div class="event-footer">
                 <p style="background-color: #e48e2c">Concert</p>
                 <div class="btn-group">
-                  <button onclick="openLesson()">Abrir</button>
+                  <button onclick="window.top.location.href='https://cubiculociencias.github.io/tallerdepiano/main#/menu/profile';">Abrir</button>
                   <div class="share">
                     <button class="share-btn">
                       <i class="fa-solid fa-share"></i>
