--- a/books.html
+++ b/books.html
@@ -18,7 +18,7 @@
 body {
   font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #313131;
-  background: #ecf0f1;
+  background: #f2f4f7;
 }
 
 body::-webkit-scrollbar {
