--- a/comunity.html
+++ b/comunity.html
@@ -21,7 +21,7 @@
 	/*** base color: #f27275 ***/
 body {
   font-size: 0.9rem;
-  background-color: #fafafb !important;
+  background-color: #f2f4f7 !important;
 }
 
 body::-webkit-scrollbar {
