--- a/main.html
+++ b/main.html
@@ -589,7 +589,7 @@ body {
  <script id="theory.html" type="text/ng-template"> 
   <ion-view > 
     <ion-content class="padding"> 
-        <div class="iframe-container"><iframe src="https://www.mozartacademy.mx/lessons" frameborder="0" allowfullscreen ></iframe></div> 
+        <div class="iframe-container"><iframe src="https://cubiculociencias.github.io/tallerdepiano/lessons" frameborder="0" allowfullscreen ></iframe></div> 
     </ion-content> 
   </ion-view> 
 </script>
@@ -597,7 +597,7 @@ body {
  <script id="practice.html" type="text/ng-template"> 
   <ion-view > 
     <ion-content class="padding"> 
-        <div class="iframe-container"><iframe src="https://www.mozartacademy.mx/profile" frameborder="0" allowfullscreen ></iframe></div> 
+        <div class="iframe-container"><iframe src="https://cubiculociencias.github.io/tallerdepiano/profile" frameborder="0" allowfullscreen ></iframe></div> 
     </ion-content> 
   </ion-view> 
 </script>
