--- a/profile.html
+++ b/profile.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/mediaelement@4.2.16/build/mediaelementplayer.min.css">
 <script src="https://cdn.jsdelivr.net/npm/mediaelement@4.2.16/build/mediaelement-and-player.min.js"></script>
 </head>
-  
+
 
 <style>
     body {
@@ -41,19 +41,6 @@
 .dashboard-panel .panel-header h4 i {color: #d8d8d8; }
 
 .dashboard-panel .panel-body {margin-top: 10px; height: 350px; border: 1px solid #d8d8d8; overflow-y: auto; }
-  
-     
-.panel-body::-webkit-scrollbar {
-  width: 8px;
-}
-.panel-body::-webkit-scrollbar-track {
-  border-radius: 0;
-}
-.panel-body::-webkit-scrollbar-thumb {
-  background-color: rgba(131, 135, 193, 0.4);
-  border-radius: 40px;
-}
-  
  
 /*-- Datos del usuario --*/
 .profile-user-data {padding: 10px 0;}
@@ -1738,7 +1725,7 @@ body::-webkit-scrollbar-thumb {
 <div ng-app="studentsApp" ng-controller="Controller1" >  
     <section class="content">
       <div class="left-content">
-  <div class="iframe-container" ><iframe src="https://cubiculociencias.github.io/tallerdepiano/lessons" frameborder="0"  allowfullscreen></iframe></div>
+  <div class="iframe-container" ><iframe src="https://www.mozartacademy.mx/lessons" frameborder="0"  allowfullscreen></iframe></div>
       </div>
 
       <div class="right-content">
@@ -1864,7 +1851,7 @@ class="js-trigger-video-modal" onclick="toggle_video_modal(this)" style="color: 
        <div class="metronome">  
     <div hidden>
     <button class="main-btn blue flex-centered" id="tap" hidden>Tap</button> 
-              <button class="min-btn" id="beatMinus">-</button> 
+              <button class="min-btn" id="beatMinus">-</button>
               <input type="number" class="beat-count" id="beatCount" value="4" readonly>
               <button class="min-btn" id="beatPlus">+</button>
     </div>
