--- a/main.html
+++ b/main.html
@@ -580,7 +580,7 @@ body {
     </ion-tabs>
 
     <ion-content class="padding tabframe-container"> 
-        <div class="iframe-container"><iframe src="https://www.mozartacademy.mx/profile" frameborder="0" allowfullscreen ></iframe></div> 
+        <div class="iframe-container"><iframe src="https://cubiculociencias.github.io/tallerdepiano/profile" frameborder="0" allowfullscreen ></iframe></div> 
     </ion-content> 
 
   </ion-view>
