--- a/books.html
+++ b/books.html
@@ -673,8 +673,7 @@ p.author {
 
   var requestData = { 
     action: "getBasicData",
-    token: "U2FsdGVkX1+Z6M/J/t+jyWRPGyLvsQ59OB1KBA584h2y7JP6aP8jij6WZTd90vNm"
-    //localStorage.getItem('TPtoken')
+    token: localStorage.getItem('TPtoken')
   };
 
   var config = {
