--- a/payment.html
+++ b/payment.html
@@ -352,12 +352,13 @@ input[type="radio"]:checked + .option h3{
  <div class="wrapper">
         <input type="radio" name="option" id="free">
         <label class="option" for="free">
-          <img src="https://i.ibb.co/W3bVHyp/Skype-piano-lessons-copy-2-750x750-2.jpg" />
-            <h4 class="price">$300 MXN <span style="font-size: 13px;">/mes</span></h4>
+          <img src="https://lh3.googleusercontent.com/d/1qIbUXsTSPmX6DyCnQTLmGhflYxaI4iOz" />
+            <h4 class="price">$150 MXN <span style="font-size: 13px;">/mes</span></h4>
             <div class="details">
               <div class="text">
-                <h4>Curso de piano por ZOOM</h4>
-                <p >Toma 1 clase de piano semanal de 1 hora de duración.</p>
+                <h4>Plan Standard</h4>
+     <p>1 hora de clase en ZOOM al mes.</p>
+    <p>Acceso al contenido.</p>
               </div>                           
               <button class="detail_button" onclick="openClasstimeModal()">Horarios</button>
                <button class="detail_button" onclick="openPaymentInfoModal(1)">Inscribir</button>
@@ -367,12 +368,13 @@ input[type="radio"]:checked + .option h3{
       <div class="wrapper">
         <input type="radio" name="option" id="production">
         <label class="option" for="production">
-          <img src="https://lh3.googleusercontent.com/d/1i9CIMoY2uKv5WKw7EHUYn_FRyafasDnL" alt="production" />
-          <h4 class="price">$150 MXN <span style="font-size: 13px;">/mes</span></h4>
+          <img src="https://lh3.googleusercontent.com/d/1UHjwR61Dwcbz3XnrrcJ9Y_c6hmMGr2Uh" alt="production" />
+          <h4 class="price">$300 MXN <span style="font-size: 13px;">/mes</span></h4>
             <div class="details">
               <div class="text">
-                <h4>Curso de piano Asíncrono</h4>
-                <p>Avanza a tu ritmo y desbloquea nuevas lecciones.</p>
+                <h4>Plan PRO</h4>
+             <p>1 hora de clase en ZOOM a la semana.</p>
+    <p>Acceso al contenido.</p>
               </div>
                            <button class="detail_button" onclick="openPaymentInfoModal(2)">Inscribir</button>
           </div>
@@ -381,12 +383,13 @@ input[type="radio"]:checked + .option h3{
       <div class="wrapper">
         <input type="radio" name="option" id="advanced">
         <label class="option" for="advanced">
-          <img src="https://i.ibb.co/c8xTZFM/Whats-App-Image-2022-05-27-at-8-42-00-AM.jpg" alt="advanced" />
-           <h4 class="price">$450 MXN<span style="font-size: 13px;">/mes</span></h4>
+          <img src="https://lh3.googleusercontent.com/d/1W0dBQ1trjKR1LZ0ZAvnYvTL4y_5m-fF-" alt="advanced" />
+           <h4 class="price">$600 MXN</h4>
             <div class="details">
               <div class="text">
-                <h4>Acceso PREMIUM</h4>
-                <p>Desbloquea y accede a todos nuestros cursos.</p>
+                <h4>Plan Premium</h4>
+             <p>2 hora de clase en ZOOM a la semana.</p>
+    <p>Acceso al contenido.</p>
               </div>
                           <button class="detail_button" onclick="openPaymentInfoModal(3)">Inscribir</button>
           </div>
@@ -445,7 +448,7 @@ input[type="radio"]:checked + .option h3{
         <img src="https://upload.wikimedia.org/wikipedia/commons/0/05/BBVA_2019.svg" style=" width: 30px; margin-bottom: 5px; "> Transferencia</a>
             </li>
            
-          </ul> 
+          </ul>
 
           <div class="tab-content" >
             <div class="tab-pane fade" id="nav-tab-card" style="background-color: transparent;">
