--- a/chat.html
+++ b/chat.html
@@ -884,7 +884,7 @@ var requestData = {
 /*}else{*/
   var autoresponse =  {
     "sender": "admin",
-    "name": "Mozart Studio", 
+    "name": "Taller de Piano", 
     "type": "text",
     "content": "Esta función esta solo disponible para el plan Híbrido y el plan PREMIUM. Actualiza tu plan para recibir este beneficio",
     "timestamp": ""
