--- a/main.html
+++ b/main.html
@@ -856,7 +856,7 @@ ion-side-menu .list .item:hover {
         </ion-item>
             <ion-item class="item-icon-left" >
       <i class="icon ri-calendar-event-fill" ></i> Horario de clase
-        <p>{{userData.classtime[0]}} <br> {{userData.classtime}}</p>   
+        <p>{{userData.classtime}}</p>   
         </ion-item>
       <ion-item class="item-icon-left item-button-right">
         <i class="icon ri-calendar-close-fill" ></i> Reposiciones
@@ -956,7 +956,7 @@ ion-side-menu .list .item:hover {
         </ion-item>
             <ion-item class="item-icon-left" >
       <i class="icon ri-calendar-event-fill" ></i> Horario de clase
-        <p>{{userData.classtime[0]}} <br> {{userData.classtime}}</p>   
+        <p> {{userData.classtime}}</p>   
         </ion-item>
       <ion-item class="item-icon-left item-button-right">
         <i class="icon ri-calendar-close-fill" ></i> Reposiciones
