--- a/main.html
+++ b/main.html
@@ -123,7 +123,7 @@ ion-side-menu {
 
 
 ion-side-menu .list .item {
-  padding: 15px 20px;
+  padding: 20px 40px;
   font-size: 18px;
   display: flex;
   align-items: center;
@@ -136,7 +136,7 @@ ion-side-menu .list .item {
 }
 
 ion-side-menu .list .item i {
-  font-size: 20px;
+  font-size: 22px;
   color: #374151;
   margin-right: 10px; /* Espaciado entre ícono y texto */
 }
@@ -155,7 +155,7 @@ ion-side-menu .list .item:hover {
 
 .menuSelectedColor {    
 
-    background-color: #f0f2f5 !important;
+    background-color: #f0f2f5 !important; 
   color: #1F2937 !important;
   font-weight:bold;
 }
@@ -514,7 +514,9 @@ ion-side-menu .list .item:hover {
     .hintMsg{
         display: none;
     }
-
+ /* ion-side-menu .list .item {
+  font-size: 15px;
+  } */
 }
 
 @keyframes pulse {
@@ -576,6 +578,8 @@ ion-side-menu .list .item:hover {
 .profile-user-data {
     display: flex;
     align-items: center;
+    margin-left: 10px;
+  margin-bottom: 10px;
 }
 .profile-user-data .circle {
     flex-shrink: 0; /* Evita que el contenedor de la imagen se reduzca */
@@ -613,6 +617,7 @@ margin-bottom: 1px;
 
 .progress{
  height: 12px;
+width: 155px;
   margin-top: 5px;
   margin-bottom: -10px;
 }
