--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@ h1 {
   
 </div>
                 
-    <!--   <section id="whatsapp-login" style="display: none;">
+    <section id="whatsapp-login" style="display: none;">
     <h4>Inicia sesión con WhatsApp</h4>
    <div id="WA-error" class="alert alert-danger" style="display: none;">
           Número no registrado, intenta otro método de inicio de sesión.
@@ -601,7 +601,7 @@ h1 {
   </div>
          <button class="login-btn" onclick="WAlogin(this)">Enviar mensaje</button>
     <button class="back-btn" onclick="showLoginOptions()">Atrás</button>
-</section> -->
+</section> 
 
 
         <section id="maillogin">
