--- a/index.html
+++ b/index.html
@@ -1137,7 +1137,12 @@ body::-webkit-scrollbar-thumb {
   
 
 
-
+$(window).on('load', function() { 
+  var storedToken = localStorage.getItem('TPtoken');
+  if (storedToken) {
+    window.location.href = 'https://www.mozartappcademy.com/main'
+  } 
+});
   
 
 </script>
