--- a/books.html
+++ b/books.html
@@ -637,8 +637,8 @@ p.author {
 
  .no-items-message {
   text-align: center;
-  margin-top: 100px;
-  width: 220px;
+  margin: 100px auto;
+  width: 340px;
   padding: 30px;
   font-size: 1.2em;
   color: #666;
