--- a/main.html
+++ b/main.html
@@ -1667,7 +1667,7 @@ width: 155px;
       <ion-content>
  <section class="content" style="grid-template-columns: auto 360px; !important;">
       <div class="left-content" >
-       <div class="iframe-container"><iframe id="chatFrame" src="www.mozartappcademy.com/chat2" frameborder="0" allowfullscreen></iframe></div>
+       <div class="iframe-container"><iframe id="chatFrame" src="https://www.mozartappcademy.com/chat2" frameborder="0" allowfullscreen></iframe></div>
       </div>
 
       <div class="right-content" style="width: 360px !important;">
