--- a/books.html
+++ b/books.html
@@ -703,7 +703,7 @@ p.author {
             <div ng-if="status != 'ACTIVO'" class="no-items-message" >
     <p style="color: red; font-weight: 400;">No disponible. </p>
                <p>Actualiza tu plan para acceder al contenido.   
-                 <br><a style="color: #2980b9; font-weight: 600;"  onclick="window.top.location.href='https://app.mozartacademy.mx/main#/menu/payment';">Ir a pagos <i class="ri-bank-card-fill"></i></a></p>
+                 <br><a style="color: #2980b9; font-weight: 600;"  onclick="window.top.location.href='https://www.mozartappcademy.com/main#/menu/payment';">Ir a pagos <i class="ri-bank-card-fill"></i></a></p>
   
   </div>
       
