--- a/achievements.html
+++ b/achievements.html
@@ -12,7 +12,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/js/bootstrap.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.8.2/angular.min.js"></script>
-<script async defer src="//www.instagram.com/embed.js"></script>
+<script async defer src="https://www.instagram.com/embed.js"></script>
 </head>
 
 
