--- a/achievements.html
+++ b/achievements.html
@@ -1507,7 +1507,7 @@ iframe#instagram-embed-0{height: auto;}
                         <p class="card-desc">Insignias:</p>
                     </div>
                     <div class="card-social">
-                        <a href="#"><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <a href="#"><svg viewBox="0 0 24 24" xmlns="https://www.w3.org/2000/svg">
                                 <path
                                     d="M15.997 3.985h2.191V.169C17.81.117 16.51 0 14.996 0c-3.159 0-5.323 1.987-5.323 5.639V9H6.187v4.266h3.486V24h4.274V13.267h3.345l.531-4.266h-3.877V6.062c.001-1.233.333-2.077 2.051-2.077z" />
                             </svg></a>
