--- a/form.html
+++ b/form.html
@@ -1767,7 +1767,7 @@ contentDiv.style.backgroundColor = 'white';
       var validation = JSON.parse(res);
       if (validation.status == "success") {
         setTimeout(function() {
-            window.location.href = 'https://www.mozartappcademy.com';
+            window.location.href = 'https://www.mozart-app.com';
         }, 3000);   
       } 
     })
