--- a/form.html
+++ b/form.html
@@ -1021,7 +1021,7 @@ div.rotate span:nth-child(3) { animation-delay: .3s }
             <div class="control-body">
               <div class="info-message">
                 <i class="zmdi zmdi-info"></i>
-    
+               Los domingos no hay clases
               </div>
               <div class="calendar">
                 <div class="month"> 
@@ -1766,9 +1766,7 @@ contentDiv.style.backgroundColor = 'white';
     .then(res => {
       var validation = JSON.parse(res);
       if (validation.status == "success") {
-        setTimeout(function() {
             window.location.href = 'https://www.mozart-app.com';
-        }, 3000);   
       } 
     })
 
