--- a/form.html
+++ b/form.html
@@ -1021,7 +1021,7 @@ div.rotate span:nth-child(3) { animation-delay: .3s }
             <div class="control-body">
               <div class="info-message">
                 <i class="zmdi zmdi-info"></i>
-               Los domingos no hay clases
+               Los domingos no impartimos clases en línea
               </div>
               <div class="calendar">
                 <div class="month"> 
