--- a/landing.html
+++ b/landing.html
@@ -1,3 +1,10 @@
+<header>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1.0, user-scalable=no">
+<link rel="icon" href="https://lh3.googleusercontent.com/d/1k9LA88h-FVVn9EeryBRVBrtc5tPl92CK" type="image/x-icon">
+    <title>Mozart Academy</title>
+</header>
+
+
 <style>
   *,
 *:before,
@@ -3002,7 +3009,7 @@ a.globalFooterCard.card-radar, div.globalFooterCard.card-radar {
 }
 </style>
 
-<header id="header" class="header">
+
   <div class="globalNav noDropdownTransition">
   <div class="container-lg">
     <ul class="navRoot">
@@ -3249,7 +3256,7 @@ a.globalFooterCard.card-radar, div.globalFooterCard.card-radar {
     </div>
   </div>
       </div>
-</header>
+
 
 
 
