--- a/landing.html
+++ b/landing.html
@@ -3010,7 +3010,7 @@ a.globalFooterCard.card-radar, div.globalFooterCard.card-radar {
 </style>
 
 
-  <div class="globalNav noDropdownTransition">
+  <div class="globalNav noDropdownTransition header">
   <div class="container-lg">
     <ul class="navRoot">
 
