--- a/landing.html
+++ b/landing.html
@@ -3009,8 +3009,8 @@ a.globalFooterCard.card-radar, div.globalFooterCard.card-radar {
 }
 </style>
 
-
-  <div class="globalNav noDropdownTransition header">
+<div class="header"> 
+  <div class="globalNav noDropdownTransition">
   <div class="container-lg">
     <ul class="navRoot">
 
@@ -3256,7 +3256,7 @@ a.globalFooterCard.card-radar, div.globalFooterCard.card-radar {
     </div>
   </div>
       </div>
-
+      </div>
 
 
 
