--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@ h1 {
            <div class="brand-wrapper strong-shadow" >
             <h1>Mozart App</h1>
           </div>
-          <div class="intro-content-wrapper">
+          <div class="intro-content-wrapper" style="margin-top: 300px !important;">
         
             <h1 class="intro-title strong-shadow">Aprende piano a tu propio ritmo</h1>
             <p class="intro-text strong-shadow">Con Mozart App, accede a lecciones interactivas cuando quieras y progresa sin límites.</p>
