--- a/landing.html
+++ b/landing.html
@@ -3268,8 +3268,9 @@ a.globalFooterCard.card-radar, div.globalFooterCard.card-radar {
     Mozart Academy
     </h1>
     <p class="intro__subtitle">
-      Visiting places in the world, getting a new job, or just looking for a way to practice your English - this is
-      the perfect place for you.
+     Piano Academy – ABRSM Certifier.
+      Hybrid and online learning experience.
+      Your best path to certification. 🇨🇦🇺🇸🇲🇽
     </p>
     <a href="#" class="button">Get Started</a>
     <img class="intro__illustration" src="https://lh3.googleusercontent.com/d/1t8svwl9hdbMLCuEHT0lZtZkrRlDd2o87" alt="" />
