--- a/index.html
+++ b/index.html
@@ -505,9 +505,9 @@ h1 {
           </div>
           <div class="intro-content-wrapper" style="margin-top: 300px !important;">
         
-            <h1 class="intro-title strong-shadow">Aprende piano a tu propio ritmo</h1>
-            <p class="intro-text strong-shadow">Con Mozart App, accede a lecciones interactivas cuando quieras y progresa sin límites.</p>
-            <a href="https://www.facebook.com/mozartacademy.oficial" class="btn btn-read-more" style="border-radius: 5px;">Más información</a>
+            <h1 class="intro-title strong-shadow">Learn piano at your own pace.</h1>
+            <p class="intro-text strong-shadow">With Mozart App, access interactive lessons anytime and progress without limits.</p>
+            <a href="https://www.facebook.com/mozartacademy.oficial" class="btn btn-read-more" style="border-radius: 5px;">Learn more</a>
           </div>
         
         <!--  <div class="intro-section-footer" style="margin-top: 40px;">
