--- a/courses/index.html
+++ b/courses/index.html
@@ -932,7 +932,7 @@ body::-webkit-scrollbar-thumb {
                 <i class="bx bxs-heart ri-lock-2-fill like-btn"></i>
               </div>
               <div class="event-content">
-                <h2>Solfeo</h2>
+                <h2>Aural Training</h2>
                 <p >Identifica notación musical y entrena tu oido.</p><br>
               </div>
                <div class="event-footer">
@@ -946,7 +946,7 @@ body::-webkit-scrollbar-thumb {
                 <i class="bx bxs-heart ri-lock-2-fill like-btn"></i>
               </div>
               <div class="event-content">
-                <h2>Armonía</h2>
+                <h2>Scales & Arpeggios</h2>
                 <p >Comprende el lenguaje musical tonal en su totalidad.</p><br>
               </div>
                <div class="event-footer">
@@ -961,7 +961,7 @@ body::-webkit-scrollbar-thumb {
                 <i class="bx bxs-heart ri-lock-2-fill like-btn"></i>
               </div>
               <div class="event-content">
-                <h2>Lectura a primer vista</h2>
+                <h2>Sight Reading</h2>
                 <p >Desarrolla la lectura fluida de partituras.</p><br>
               </div>
                <div class="event-footer">
@@ -971,14 +971,13 @@ body::-webkit-scrollbar-thumb {
 
 
 
-
               <div class="card event-card">
               <div class="event-header">
-                <img src="https://lh3.googleusercontent.com/d/1qBSPqmPqcnh7W0Z7EGvIrml9XvvfLuoW" />
+                <img src="https://lh3.googleusercontent.com/d/1bHlibSZdmfcy0O3OtmpM1DC3Hq49tjr8" />
                 <i class="bx bxs-heart ri-lock-2-fill like-btn"></i>
               </div>
               <div class="event-content">
-                <h2>Biografías</h2>
+                <h2>Music Theory</h2>
                 <p >Conoce la vida y las obras de los músicos más influyentes de la historia.</p><br>
               </div>
                <div class="event-footer">
