--- a/main.html
+++ b/main.html
@@ -885,12 +885,16 @@ width: 155px;
     <div class="dropdown-item" ng-click="goToStatus()">
       <i class="ion-ios-contact-outline"></i> Perfil
     </div>
+     <div class="dropdown-item" ng-click="goToChat()">
+      <i class="ri-chat-4-line"></i> Mensajes
+    </div>
              <div class="dropdown-item" ng-click="goToStatus()">
       <i class="ion-card"></i> Pagos
     </div>
-    <div class="dropdown-item" ng-click="goToChat()">
-      <i class="ion-ios-chatboxes-outline"></i> Tutoría
+      <div class="dropdown-item" >
+      <i class="ri-settings-3-line"></i> Configuración
     </div>
+   
   </div>
 
     <div class="dropdownContent" ng-show="dropdownChatVisible" ng-click="$event.stopPropagation()">
@@ -1251,11 +1255,14 @@ width: 155px;
     <div class="dropdown-item" ng-click="goToStatus()">
       <i class="ion-ios-contact-outline"></i> Perfil
     </div>
+         <div class="dropdown-item" ng-click="goToChat()">
+      <i class="ri-chat-4-line"></i> Mensajes
+    </div>
              <div class="dropdown-item" ng-click="goToStatus()">
       <i class="ion-card"></i> Pagos
     </div>
-    <div class="dropdown-item" ng-click="goToChat()">
-      <i class="ion-ios-chatboxes-outline"></i> Tutoría
+      <div class="dropdown-item" >
+      <i class="ri-settings-3-line"></i> Configuración
     </div>
   </div>
 
@@ -1360,7 +1367,13 @@ width: 155px;
       <i class="ion-card"></i> Pagos
     </div>
     <div class="dropdown-item" ng-click="goToChat()">
-      <i class="ion-ios-chatboxes-outline"></i> Tutoría
+      <i class="ri-chat-4-line"></i> Mensajes
+    </div>
+             <div class="dropdown-item" ng-click="goToStatus()">
+      <i class="ion-card"></i> Pagos
+    </div>
+      <div class="dropdown-item" >
+      <i class="ri-settings-3-line"></i> Configuración
     </div>
   </div>
 
@@ -1477,11 +1490,14 @@ width: 155px;
     <div class="dropdown-item" ng-click="goToStatus()">
       <i class="ion-ios-contact-outline"></i> Perfil
     </div>
+         <div class="dropdown-item" ng-click="goToChat()">
+      <i class="ri-chat-4-line"></i> Mensajes
+    </div>
              <div class="dropdown-item" ng-click="goToStatus()">
       <i class="ion-card"></i> Pagos
     </div>
-    <div class="dropdown-item" ng-click="goToChat()">
-      <i class="ion-ios-chatboxes-outline"></i> Tutoría
+      <div class="dropdown-item" >
+      <i class="ri-settings-3-line"></i> Configuración
     </div>
   </div>
 
@@ -1747,11 +1763,14 @@ width: 155px;
     <div class="dropdown-item" ng-click="goToStatus()">
       <i class="ion-ios-contact-outline"></i> Perfil
     </div>
+         <div class="dropdown-item" ng-click="goToChat()">
+      <i class="ri-chat-4-line"></i> Mensajes
+    </div>
              <div class="dropdown-item" ng-click="goToStatus()">
       <i class="ion-card"></i> Pagos
     </div>
-    <div class="dropdown-item" ng-click="goToChat()">
-      <i class="ion-ios-chatboxes-outline"></i> Tutoría
+      <div class="dropdown-item" >
+      <i class="ri-settings-3-line"></i> Configuración
     </div>
   </div>
 
