--- a/main.html
+++ b/main.html
@@ -1406,8 +1406,8 @@ width: 155px;
     </ion-tabs>
 
 
-    <ion-content class="padding tabframe-container"> 
-        <div class="iframe-container"><iframe src="https://www.mozart-app.com/achievements" frameborder="0" allowfullscreen ></iframe></div> 
+    <ion-content class="padding"> 
+        <div class="iframe-container"><iframe src="https://www.mozart-app.com/comunity" frameborder="0" allowfullscreen ></iframe></div> 
     </ion-content> 
 
   </ion-view>
