--- a/main.html
+++ b/main.html
@@ -513,6 +513,11 @@ ion-side-menu .list .item:hover {
 }
 }
 
+  .profilImg{
+    margin-top: -9px;
+    margin-left: -2px;
+  }
+
 @media (min-width: 850px) {
 .menubtn{
     display: none;
@@ -520,6 +525,10 @@ ion-side-menu .list .item:hover {
  .hintMsg{
         display: none;
     }
+
+.profilImg{
+    margin-left: 6px;
+  }
 
 
     /*
@@ -737,10 +746,10 @@ width: 155px;
     content: "";
     height: 50px;
     width: 50px;
-    top: -5px;
-    left: -2.6px;
+    top: -3.4px;
+    right: -5.1px;
     border-radius: 50%;
-    border: 1px solid silver;
+    border: 1px solid gray;
     animation: 1.5s linear 0s normal none infinite focuse;
 }
    
