--- a/courses/index.html
+++ b/courses/index.html
@@ -955,7 +955,7 @@ body::-webkit-scrollbar-thumb {
             </div>
 
 
-             <div class="card event-card">
+             <div class="card event-card" onclick="window.top.location.href='https://www.mozart-app.com/main#/menu/harmony';">
               <div class="event-header">
                 <img src="https://lh3.googleusercontent.com/d/10OB7GYosbcANXqMyUxuiRkvZzIq_9Jvz" />
                 <i class="bx bxs-heart ri-lock-2-fill like-btn"></i>
