--- a/courses/index.html
+++ b/courses/index.html
@@ -912,7 +912,7 @@ body::-webkit-scrollbar-thumb {
     <div>
         <h1>Busca tu plan ideal.</h1>
         <p>Conoce más sobre nuestros planes de trabajo y escoge el ideal para ti.</p>
-        <a onclick="window.top.location.href='https://www.mozartappcademy.com/main#/menu/payment';" class="alert-button">información →</a> <br>
+        <a  class="alert-button">información →</a> <br>
     </div>
 </div>          
         </div>
@@ -955,7 +955,7 @@ body::-webkit-scrollbar-thumb {
             </div>
 
 
-             <div class="card event-card" onclick="window.top.location.href='https://www.mozart-app.com/main#/menu/harmony';">
+             <div class="card event-card" onclick="window.top.location.href='https://www.mozart-app.com/main#/menu/armonia';">
               <div class="event-header">
                 <img src="https://lh3.googleusercontent.com/d/10OB7GYosbcANXqMyUxuiRkvZzIq_9Jvz" />
                 <i class="bx bxs-heart ri-lock-2-fill like-btn"></i>
