--- a/landing.html
+++ b/landing.html
@@ -3304,12 +3304,13 @@ a.globalFooterCard.card-radar, div.globalFooterCard.card-radar {
       Start a meaningful conversation in our community platform, ask questions when you’re stuck and get help from a
       real person. Get answers fast, no matter your question.
     </p>
-    <svg width="174" height="341" viewBox="0 0 174 341" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+   <!-- <svg width="174" height="341" viewBox="0 0 174 341" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
       <use xlink:href="#grow-illustration"></use>
     </svg>
     <svg width="898" height="500" viewBox="0 0 898 500" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" class="blob">
       <use xlink:href="#grow-blob"></use>
-    </svg>
+    </svg> -->
+       <img class="intro__illustration" src="https://lh3.googleusercontent.com/d/1N8I8MQrtZHagwhzeknq7uAdx3gFoTXx6" alt="" />
   </section>
   <div class="arrow-1"></div>
   <section class="get-feedback">
