--- a/lessons.html
+++ b/lessons.html
@@ -2465,7 +2465,7 @@ app.factory('SharedState', function($http, $q) {
                   icon: 'auto_stories',
                   type: 'Teoría',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d/1WqVnSwujAS7Rps02XNfqueu7PtiNVG7D/preview'
+                  url: 'https://app.mozartacademy.mx/grandstaff'
                   },{
                   icon: 'description',
                   type: 'Ejercicios',
