--- a/lessons.html
+++ b/lessons.html
@@ -2530,6 +2530,12 @@ app.factory('SharedState', function($http, $q) {
                   type: 'Partitura',
                   media: 'pdf',
                   url: 'https://drive.google.com/file/d/15amNYqOJwINhWNjw8I77uRWZ-6sh15-e/preview'
+                  },
+                           {
+                  icon: 'piano',
+                  type: 'Play',
+                  media: 'pdf',
+                  url: 'https://app.mozartacademy.mx/grandstaff'
                   }
                 ]
               }
@@ -2820,6 +2826,7 @@ app.factory('SharedState', function($http, $q) {
                   media: 'pdf',
                   url: 'https://drive.google.com/file/d/1i7yEW2-HS26JozRu_YWd0pm-mneAgk5V/preview'
                   }
+                  
                  
                 ]
               },
