--- a/lessons.html
+++ b/lessons.html
@@ -2227,7 +2227,7 @@ input[type="radio"]:checked + label.green-bg::after {
             <div class="modal-doc">
                         
      <button class="menu-bar" onclick="closemodal()"> Salir </button>           
-     <iframe id="drive" src="" frameborder="0"></iframe>     
+     <iframe id="drive" src="" frameborder="0" allow="microphone; midi"></iframe>     
                 <a 
           href="#" 
           class="close-modal" onclick="closemodal()" 
