--- a/statistics.html
+++ b/statistics.html
@@ -1,12 +1,11 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no, maximum-scale=1.0, user-scalable=no">
 <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="https://pixinvent.com/stack-responsive-bootstrap-4-admin-template/app-assets/css/bootstrap-extended.min.css">
-<link rel="stylesheet" type="text/css" href="https://pixinvent.com/stack-responsive-bootstrap-4-admin-template/app-assets/fonts/simple-line-icons/style.min.css">
-<link rel="stylesheet" type="text/css" href="https://pixinvent.com/stack-responsive-bootstrap-4-admin-template/app-assets/css/colors.min.css">
-<link rel="stylesheet" type="text/css" href="https://pixinvent.com/stack-responsive-bootstrap-4-admin-template/app-assets/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://www.mozartacademy.mx/styles/bootstrap-extended.min.css">
+<link rel="stylesheet" type="text/css" href="https://www.mozartacademy.mx/styles/style.min.css">
+<link rel="stylesheet" type="text/css" href="https://www.mozartacademy.mx/styles/colors.min.css">
+<link rel="stylesheet" type="text/css" href="https://www.mozartacademy.mx/styles/bootstrap.min.css">
 <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
-
 
 
 <style>
