--- a/lessons.html
+++ b/lessons.html
@@ -1101,6 +1101,7 @@ input[type="radio"]:checked + label.green-bg::after {
   color: #384656;
   font-weight: 600 ;
   border: 1px solid #384656 ;
+    z-index: 1000 !important;
 }
 
 .next-btn:hover {
