--- a/lessons.html
+++ b/lessons.html
@@ -1097,11 +1097,28 @@ input[type="radio"]:checked + label.green-bg::after {
 
 
 .next-btn {
-  border-radius: 5px ;
-  color: #384656;
-  font-weight: 600 ;
-  border: 1px solid #384656 ;
+  font-weight: 700;
+  color: #36454F;
+  border-radius: 0.375rem;
+  --tw-ring-offset-width: 2px;
+  cursor: pointer;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+  transition-duration: 0.3s;
+  --tw-ring-offset-color: #c7d2fe;
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0
+    var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0
+    calc(1px + 2px) rgb(59 130 246 / 0.5);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow),
+    var(--tw-shadow, 0 0 #0000);
+  --tw-ring-offset-color: #c7d2fe;
     z-index: 1000 !important;
+    position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .next-btn:hover {
@@ -5229,6 +5246,9 @@ var startButton = document.getElementById('start-quiz-btn');
     let questionNumber = document.getElementById("questionNumber");
     questionNumber.textContent = `${currentQuestion}/${questions.length}`;
 
+      let container = document.getElementById("quiz-content");
+    container.style.filter = "none";
+
     displayQuestion();
   }
   
@@ -5238,6 +5258,7 @@ var startButton = document.getElementById('start-quiz-btn');
     let rightAnswer = questions[questionIndex].correctAnswer;
     let answers = document.getElementsByName("answers");
     let progress = document.getElementById("progress");
+     let container = document.getElementById("quiz-content");
 
     questionIsAnswered = 1;
 
@@ -5268,6 +5289,7 @@ var startButton = document.getElementById('start-quiz-btn');
     let button = document.createElement("button");
     button.classList.add("next-btn")
     button.style.backgroundColor = "#E6EAEF";
+   container.style.filter = "blur(5px)";
 
     if (isLastQuestion()) {
       button.id = "show-results-btn";
