--- a/main.html
+++ b/main.html
@@ -1718,7 +1718,7 @@ width: 200px; /* Ajusta según el tamaño deseado */
  <script id="score.html" type="text/ng-template"> 
   <ion-view > 
     <ion-content class="padding"> 
-        <div class="iframe-container"><iframe src="https://www.mozart-app.com/score" frameborder="0" allowfullscreen ></iframe></div> 
+        <div class="iframe-container"><iframe src="https://www.mozart-app.com/landing" frameborder="0" allowfullscreen ></iframe></div> 
     </ion-content> 
   </ion-view> 
 </script>
