--- a/main.html
+++ b/main.html
@@ -1694,19 +1694,11 @@ width: 200px; /* Ajusta según el tamaño deseado */
         
     </ion-nav-bar>
 
-<div class="hintMsg"><i class="ri-information-2-line" style="font-size: 20px;"></i> Explora más funciones</div>
-    <ion-tabs class="tabs-striped tabs-icon-top tabs-stable ">
-      <ion-tab title="Puntaje" icon="ri-line-chart-fill" href="#/menu/reel/score" class="pulseTab">
-        <ion-nav-view name="score-tab"></ion-nav-view>
-      </ion-tab>
-      <ion-tab title="Logros" icon="ri-trophy-fill" href="#/menu/reel/achievements">
-        <ion-nav-view name="achievements-tab"></ion-nav-view>
-      </ion-tab>
-    </ion-tabs>
+
 
 
     <ion-content class="padding"> 
-        <div class="iframe-container"><iframe src="https://www.mozart-app.com/comunity" frameborder="0" allowfullscreen ></iframe></div> 
+        <div class="iframe-container"><iframe src="https://www.mozart-app.com/landing" frameborder="0" allowfullscreen ></iframe></div> 
     </ion-content> 
 
   </ion-view>
